--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Ping coming soon page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <title>Ping Coming Soon Page</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  
+
+    <header>
+      <img src="images/logo.svg" alt="Ping Logo">
+    </header>
+
+    <div class="main">
+      <div class="main_text">
+        <h1>We are lauching <span>soon!</span></h1>
+        <p>Suscribe and get notified</p>
+      </div>
+
+      <div class="main_form">
+        <form>
+          <input type="email" placeholder="Your email adress..." id="sub-mail">
+          <button type="submit" id="sub-btn">Notify Me</button>
+        </form>
+      </div>
+    </div>
+
 </body>
+
 </html>
