mobile design 90% finish

--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
       </div>
     </div>
 
+    <div class="main-image">
+      <img src="images/illustration-dashboard.png" alt="">
+    </div>
+
+
+
+    <footer>
+      <a href=""><img src="images/facebook-f-brands.svg" alt="facebook link"></a>
+      <a href=""><img src="images/twitter-brands.svg" alt="twitter link"></a>
+      <a href=""><img src="images/instagram-brands.svg" alt="instagram link"></a>
+      <p>© Copyright Ping. All right reserved.</p>
+    </footer>
+
 </body>
 
 </html>
